fix word break in inline code

--- a/source/stylesheets/site.css
+++ b/source/stylesheets/site.css
@@ -168,6 +168,7 @@ code {
   font-size: 16px;
   padding: 1px 3px;
   font-weight: bold;
+  word-break: unset;
 }
 
 .post blockquote {
